# mdtableCP2excel

./: LICENSE  pyproject.toml  readme.md
src/md_table_to_excel/: main.py
